# TicketKnowLedgegraph

./: .dockerignore  00_create_database.sql  01_app_relational_core.sql  02_enums_calendars_temporal.sql  03_security_rls.sql  04_outbox_and_triggers.sql  05_fulltext_search.sql  06_kg_graph_schema.sql  07_functions_and_procs.sql  08_views_and_tvfs.sql  09_partitioning_plan_optional.sql  10_tickets_api.sql  11_ticket_master.sql  12_ticket_domain_extensions.sql  13_ticket_procs.sql  14_migrate_tickets_to_master.sql  15_asset_management_procs.sql  16_attachments_extension.sql  16_privacy_and_watchers.sql  17_attachments_nullable_ticket.sql  18_messaging_and_types.sql  19_rich_messaging.sql  20_kg_analytics.sql  21_ai_tables.sql  22_kg_extensions.sql  23_kg_extensions_seed.sql  24_kg_enhancements.sql  25_kg_advanced_analytics.sql  25_kg_advanced_analytics_fixed.sql  26_semantic_search_embeddings.sql  26_user_site_access.sql  27_tickets_consolidation.sql  28_drop_ticketmaster.sql  30_embedding_metadata.sql  31_vendor_service_requests.sql  99_smoke_test.sql  PRIVACY_AND_WATCHERS_FEATURES.md  PRODUCTION_IMPROVEMENTS.md  README.md  SECURITY-IMPLEMENTATION.md  (+48 more)
.github/: copilot-instructions.md
api/: .dockerignore  .env  .env.test  Dockerfile  package-lock.json  package.json  (+2 more)
worker/: .dockerignore  Dockerfile  Dockerfile.alert_poller  alert_poller.py  knowledge_processor.py  main.py  maintenance_predictor.py  pyproject.toml  requirements.txt  sla_monitor.py
worker/app/: ai_agent.py  db.py  jobs.py  outbox.py  outbox_worker.py  settings.py
worker/tests/: test_worker.py
(+350 files in other folders)
