[project]
name = "opsgraph-worker"
version = "0.1.0"
description = "Worker for OpsGraph outbox processing"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.95.0"
uvicorn = {extras=["standard"],version="^0.22.0"}
pyodbc = "^4.0.35"
httpx = "^0.24.0"
apscheduler = "^3.10.1"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
